--- a/code.ipynb
+++ b/code.ipynb
@@ -2,13 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import numpy as np\n",
-    "import matplotlib as mat\n",
-    "import cv2"
+    "import cv2\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import classification_report\n",
+    "from scipy.cluster.vq import vq\n",
+    "import os"
    ]
   },
   {
@@ -31,7 +36,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cv",
+   "display_name": "cvpro2",
    "language": "python",
    "name": "python3"
   },
